--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "bcrypt": "^5.1.0",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
     "path": "^0.12.7",
